# ObjectPoseEstimation

./: .cproject  .gitignore  CMakeLists.txt  OPEMain.cpp  OPEUtils.h  ObjectPoseEstimation.vcxproj.filters  ObjectPoseEstimator.cpp  README.md  TableObjectDetector.h  TableObjectDetector.hpp  TableObjectModeler.h
.svn/: all-wcprops  entries
.svn/text-base/: .project.svn-base  OPESettings.cpp.svn-base  OPEUtils.cpp.svn-base  ObjectPoseEstimation.vcxproj.svn-base  ObjectPoseEstimator.h.svn-base  Plane.h.svn-base  PointCloudCapture.cpp.svn-base  PointCloudCapture.h.svn-base  SQTypes.h.svn-base  TableObjectModeler.h.svn-base
Release/: InertiaCalculations.d  Minimization.d  OPEMain.d  OPESettings.d  OPEUtils.d  ObjectPoseEstimation  ObjectPoseEstimator.d  Plane.d  PointCloudCapture.d  SQFitting.d  libObjectPoseEstimation  makefile  objects.mk  subdir.mk
